@@ -21,3 +21,10 @@ dependencies {
     testImplementation "com.github.stefanbirkner:system-lambda:1.2.1"
     testImplementation project(":test-utils")
 }
+
+tasks.withType(Test).configureEach {
+    if (javaVersion.isCompatibleWith(JavaVersion.VERSION_17)) {
+        // See https://kotest.io/docs/next/extensions/system_extensions.html#system-environment.
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+    }
+}
